--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: Shabnam;
+  src: url("../../assets/font/shabnam/Shabnam.eot");
+  src: url("../../assets/font/shabnam/Shabnam.eot?#iefix") format("embedded-opentype"), url("../../assets/font/shabnam/Shabnam.woff2") format("woff2"), url("../../assets/font/shabnam/Shabnam.woff") format("woff"), url("../../assets/font/shabnam/Shabnam.ttf") format("truetype");
+  font-weight: normal;
+}
 * {
   padding: 0;
   margin: 0;
@@ -5,6 +11,7 @@
 
 body {
   background-color: #edf2f7;
+  font-family: Shabnam;
 }
 
 .header {
