add margin-right for aside tag.

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -97,7 +97,7 @@ body {
         @include bodyStyle;
         flex-direction: column;
         width: 25%;
-        margin-left: 25px;
+        margin-right: 25px;
         @include boxStyle;
 
         div {
