--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -109,7 +109,7 @@ body {
   align-items: center;
   flex-direction: column;
   width: 25%;
-  margin-left: 25px;
+  margin-right: 25px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
