--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -211,7 +211,7 @@ footer {
         aside {
             width:calc(100% - 2rem) ;
             height: 600px;
-            margin-left: 0;
+            margin-right: 0;
         }
     }
 
